[package]
name = "openstreetmap"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Best in class OpenStreetMap Rust tools."
homepage = "https://github.com/qedus/openstreetmap/"
repository = "https://github.com/qedus/openstreetmap/"
readme = "README.md"
keywords = ["openstreetmap", "pbf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
